# danmaku-plugin

./: .gitignore  CMakeLists.txt  README.md  admin_build_install.ps1  comments_demo.txt  目的.txt
comment_bridge/: config.json  kick_client.py  main.py  run.bat  twitch_client.py  writer.py  youtube_client.py
comment_bridge/static/: app.js  index.html  style.css
danmaku-bridge/: run.bat
danmaku-bridge-tray/: README.md  run_hidden.vbs
danmaku-bridge-tray/config/: providers.json  settings.json
danmaku-bridge-tray/src/auth/: callback_server.py  oauth_core.py  token_store.py
danmaku-bridge-tray/src/moderation/: filter_pipeline.py
danmaku-bridge-tray/src/normalize/: unified_comment.py
danmaku-bridge-tray/src/providers/: obs_listener.py  youtube_adapter.py
danmaku-bridge-tray/src/ui/: main_window.py
danmaku-bridge/config/: settings.json
danmaku-bridge/data/: token_store.db
danmaku-bridge/src/auth/: pkce.py
danmaku-bridge/src/providers/: twitch_adapter.py  youtube_adapter.py
danmaku-bridge/src/ui/: main_window.py
danmaku-plugin/: CMakeLists.txt  admin_build_install.ps1  install.bat  仕様書.txt  目的.txt
danmaku-plugin/data/locale/: en-US.ini  ja-JP.ini
danmaku-plugin/src/: danmaku-source.cpp  plugin-main.cpp
src/: danmaku-source.cpp  plugin-main.cpp
